--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+title: Datamwin
+author: Datamwin
+email: jethrod22@gmail.com
 description: > # this means to ignore newlines until "show_exerpts:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -13,14 +13,14 @@ sass:
   sass_dir: _sass
 plainwhite:
   name: Adam Denisov
-  tagline: Developer. Designer
+  tagline: DataScience and AI Enthusiast
   date_format: "%b %-d, %Y"
   sitemap: true # set to true to generate sitemap.xml content
 
   # generate social links in footer
   social_links:
-    twitter: thelehhman
-    github:  thelehhman
+    twitter: Datamwin
+    github:  Datamwin
     linkedIn: in/thelehhman
     rss: rss
     # dribbble: jekyll
